--- a/app/Home.css
+++ b/app/Home.css
@@ -1,11 +1,11 @@
 .home{
-  background: url("../Assets/Herosection.png");
+  background: url("../Assets/Herosection.png") !important;
   background-position: center;
   background-size: cover;
   height: 100vh;
   display: flex;
   justify-content: center;
-  /* background-attachment: fixed; */
+
   align-items: center;
   flex-direction: column;
   /* padding-top: 20vh; */
@@ -17,12 +17,13 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
   
 }
 .swiper {
   width: 100%;
   cursor: grab;
-  /* padding-right: 10vw; */
+ 
 }
 
 .swiper-slide {
@@ -45,4 +46,18 @@
   background-size: cover;
   height: 100vh;
   
+}
+
+.box {
+  background: linear-gradient(180deg, rgba(193, 97, 201, 0.3) 0%, rgba(39, 40, 75, 0.3) 100%);
+  border-radius: 16px;
+  padding: 2rem;
+  border: 1px solid rgba(255, 255, 255, 0.1); /* Stroke */
+}
+
+.no-scrollbar::-webkit-scrollbar{
+  display: none;
+}
+.no-scrollbar{
+  scrollbar-width: 0px;
 }
