--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
 :root {
   --background: #17182c;
   --foreground: #171717;
+  
   --main:#54EECC;
 }
 
@@ -23,4 +24,10 @@ body {
 .hover-main:hover{
   box-shadow: 0 0 8px var(--main);
   transition: 0.3s;
+}
+
+@media (max-width:768px){
+  html{
+    font-size: 14px;
+  }
 }
